# distributed-rl

./: .gitignore  pyproject.toml  requirements.txt
hf_accelerate/: README.md  distr_train.py
ray-train/: ddp_train.py  min_train.py  ppo_cartpole.py
ray_train/: ddp_train.py  ddp_train_naive_from_scratch.py  ddp_tune.py  ddp_tune_wtensorboard.py  min_train.py  ppo_cartpole.py
slurm/: ray_ddp_train_1node2cpu.sbatch  ray_ddp_train_1node2gpu.sbatch  torchrun_ddp_train_1node2cpu.sbatch  torchrun_ddp_train_1node2gpu.sbatch
slurm_setup/: README.md  install_deps.sh  submit_slurm_job.py
torchrun/: README.md  ddp_train.py  fsdp_train.py
