[project]
name = "distributed-rl"
version = "0.1.0"
description = "Distributed Learning with PyTorch DDP, Ray Train, and Accelerate"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[atari]==0.29.1",
    "gymnasium[classic-control]==0.29.1",
    "gymnasium[accept-rom-license]==0.29.1",
    "moviepy==1.0.3",
    "numpy<2",
    "opencv-python==4.10.0.84",
    "torch==2.5.0",
    "torchvision==0.20.0",
    "pytorch-ignite==0.5.1",
    "tensorboard==2.18.0",
    "mypy==1.8.0",
    "ptan==0.8.1",
    "stable-baselines3==2.3.2",
    "torchrl==0.6.0",
    "ray==2.37.0",
    "dm-tree==0.1.9",
    "typer>=0.9",
    "scipy>=1.10",
    "lz4>=4.3",
    "pytest",
    "GPUtil>=1.4",
    "accelerate>=0.33.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

